docs/api/qiskit/0.19/qiskit.pulse.InstructionScheduleMap.mdx
---
title: InstructionScheduleMap (v0.19)
description: API reference for qiskit.pulse.InstructionScheduleMap in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.InstructionScheduleMap
---

# InstructionScheduleMap

<Class id="qiskit.pulse.InstructionScheduleMap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/instruction_schedule_map.py" signature="InstructionScheduleMap" modifiers="class">
  Mapping from [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") [`qiskit.circuit.Instruction`](qiskit.circuit.Instruction "qiskit.circuit.Instruction") names and qubits to [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") s. In particular, the mapping is formatted as type:

  ```python
  Dict[str, Dict[Tuple[int], Schedule]]
  ```

  where the first key is the name of a circuit instruction (e.g. `'u1'`, `'measure'`), the second key is a tuple of qubit indices, and the final value is a Schedule implementing the requested instruction.

  These can usually be seen as gate calibrations.

  Initialize a circuit instruction to schedule mapper instance.

  ## Attributes

  <span id="instructionschedulemap-instructions" />

  ### instructions

  <Attribute id="qiskit.pulse.InstructionScheduleMap.instructions" attributeTypeHint="List[str]">
    Return all instructions which have definitions.

    By default, these are typically the basis gates along with other instructions such as measure and reset.

    **Return type**

    `List`\[`str`]

    **Returns**

    The names of all the circuit instructions which have Schedule definitions in this.
  </Attribute>

  ## Methods

  <span id="instructionschedulemap-add" />

  ### add

  <Function id="qiskit.pulse.InstructionScheduleMap.add" signature="InstructionScheduleMap.add(instruction, qubits, schedule)">
    Add a new known instruction for the given qubits and its mapping to a pulse schedule.

    **Parameters**

    *   **instruction** (`str`) – The name of the instruction to add.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The qubits which the instruction applies to.
    *   **schedule** (`Union`\[[`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule"), `Callable`\[…, [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")]]) – The Schedule that implements the given instruction.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the qubits are provided as an empty iterable.

    **Return type**

    `None`
  </Function>

  <span id="instructionschedulemap-assert-has" />

  ### assert\_has

  <Function id="qiskit.pulse.InstructionScheduleMap.assert_has" signature="InstructionScheduleMap.assert_has(instruction, qubits)">
    Error if the given instruction is not defined.

    **Parameters**

    *   **instruction** (`str`) – The instruction for which to look.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The specific qubits for the instruction.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the instruction is not defined on the qubits.

    **Return type**

    `None`
  </Function>

  <span id="instructionschedulemap-get" />

  ### get

  <Function id="qiskit.pulse.InstructionScheduleMap.get" signature="InstructionScheduleMap.get(instruction, qubits, *params, **kwparams)">
    Return the defined [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") for the given instruction on the given qubits.

    **Parameters**

    *   **instruction** (`str`) – Name of the instruction.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The qubits for the instruction.
    *   **\*params** – Command parameters for generating the output schedule.
    *   **\*\*kwparams** – Keyworded command parameters for generating the schedule.

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")

    **Returns**

    The Schedule defined for the input.
  </Function>

  <span id="instructionschedulemap-get-parameters" />

  ### get\_parameters

  <Function id="qiskit.pulse.InstructionScheduleMap.get_parameters" signature="InstructionScheduleMap.get_parameters(instruction, qubits)">
    Return the list of parameters taken by the given instruction on the given qubits.

    **Parameters**

    *   **instruction** (`str`) – Name of the instruction.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The qubits for the instruction.

    **Return type**

    `Tuple`\[`str`]

    **Returns**

    The names of the parameters required by the instruction.
  </Function>

  <span id="instructionschedulemap-has" />

  ### has

  <Function id="qiskit.pulse.InstructionScheduleMap.has" signature="InstructionScheduleMap.has(instruction, qubits)">
    Is the instruction defined for the given qubits?

    **Parameters**

    *   **instruction** (`str`) – The instruction for which to look.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The specific qubits for the instruction.

    **Return type**

    `bool`

    **Returns**

    True iff the instruction is defined.
  </Function>

  <span id="instructionschedulemap-pop" />

  ### pop

  <Function id="qiskit.pulse.InstructionScheduleMap.pop" signature="InstructionScheduleMap.pop(instruction, qubits, *params, **kwparams)">
    Remove and return the defined `Schedule` for the given instruction on the given qubits.

    **Parameters**

    *   **instruction** (`str`) – Name of the instruction.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The qubits for the instruction.
    *   **\*params** – Command parameters for generating the output schedule.
    *   **\*\*kwparams** – Keyworded command parameters for generating the schedule.

    **Return type**

    [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule")

    **Returns**

    The Schedule defined for the input.
  </Function>

  <span id="instructionschedulemap-qubit-instructions" />

  ### qubit\_instructions

  <Function id="qiskit.pulse.InstructionScheduleMap.qubit_instructions" signature="InstructionScheduleMap.qubit_instructions(qubits)">
    Return a list of the instruction names that are defined by the backend for the given qubit or qubits.

    **Parameters**

    **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – A qubit index, or a list or tuple of indices.

    **Return type**

    `List`\[`str`]

    **Returns**

    All the instructions which are defined on the qubits.

    For 1 qubit, all the 1Q instructions defined. For multiple qubits, all the instructions which apply to that whole set of qubits (e.g. `qubits=[0, 1]` may return `['cx']`).
  </Function>

  <span id="instructionschedulemap-qubits-with-instruction" />

  ### qubits\_with\_instruction

  <Function id="qiskit.pulse.InstructionScheduleMap.qubits_with_instruction" signature="InstructionScheduleMap.qubits_with_instruction(instruction)">
    Return a list of the qubits for which the given instruction is defined. Single qubit instructions return a flat list, and multiqubit instructions return a list of ordered tuples.

    **Parameters**

    **instruction** (`str`) – The name of the circuit instruction.

    **Return type**

    `List`\[`Union`\[`int`, `Tuple`\[`int`]]]

    **Returns**

    Qubit indices which have the given instruction defined. This is a list of tuples if the instruction has an arity greater than 1, or a flat list of ints otherwise.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the instruction is not found.
  </Function>

  <span id="instructionschedulemap-remove" />

  ### remove

  <Function id="qiskit.pulse.InstructionScheduleMap.remove" signature="InstructionScheduleMap.remove(instruction, qubits)">
    Remove the given instruction from the listing of instructions defined in self.

    **Parameters**

    *   **instruction** (`str`) – The name of the instruction to add.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The qubits which the instruction applies to.

    **Return type**

    `None`
  </Function>
</Class>

